# Halom

./: .env  .gitignore  .prettierrc  .solhint.json  ARCHITECTURE_ANALYSIS.md  BUG_BOUNTY_DEPLOYMENT_CHECKLIST.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CRITICAL_FIXES_IMPLEMENTATION.md  DELEGATION_AND_REBASE_IMPROVEMENTS.md  DEPENDENCY_FIX_SUMMARY.md  Dockerfile.hardhat  Dockerfile.python  IMPLEMENTATION_SUMMARY.md  LICENSE  MODULE_READINESS_ASSESSMENT.md  PROJECT_REORGANIZATION_SUMMARY.md  README.md  README_GOVERNANCE.md  SECURE_ROLE_IMPLEMENTATION.md  SECURITY_FIXES_SUMMARY.md  TESTNET_IMPROVEMENTS.md  coverage.json  docker-compose.yml  env.example  eslint.config.js  hardhat.config.cjs  hardhat.config.js  package-lock.json  package.json  pyrightconfig.json  requirements.in  requirements.txt  test_enhanced_updater.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  ci.yml  comprehensive-testing.yml
audit/: audit-scope.md  pre-audit-checklist.md  threat-model.md
bounty/: bounties-payouts.md  bounty-policy.md  bounty-scope.md
cache/: solidity-files-cache.json
contracts/: HalomGovernor.sol  HalomLPStaking.sol  HalomOracle.sol  HalomOracleV2.sol  HalomOracleV3.sol  HalomRoleManager.sol  HalomStaking.sol  HalomTimelock.sol  HalomToken.sol  HalomTreasury.sol
contracts/access/: Roles.sol  SafeHarbor.sol  __init__.py
contracts/bridge/: Bridge.sol  BridgeV2.sol  BridgeValidator.sol
contracts/core/: Token.sol  Treasury.sol  __init__.py
contracts/governance/: Governance.sol  GovernanceV2.sol  Governor.sol  QuadraticVotingUtils.sol  Timelock.sol  __init__.py
contracts/interfaces/: IHalomInterfaces.sol  __init__.py
contracts/libraries/: GovernanceErrors.sol  GovernanceMath.sol
contracts/mocks/: MockERC20.sol
contracts/oracle/: Oracle.sol  OracleV2.sol  __init__.py
contracts/staking/: LPStaking.sol  Staking.sol  StakingV2.sol  __init__.py
contracts/test/: MockERC20.sol  TestProxy.sol
contracts/token/: HalomToken.sol
contracts/utils/: AntiWhale.sol  Blacklist.sol  FeeOnTransfer.sol  Treasury.sol
coverage/: coverage-final.json  index.html  lcov.info
coverage/access/: Roles.sol.html  index.html
coverage/contracts/: HalomGovernor.sol.html  HalomOracle.sol.html  HalomRoleManager.sol.html  HalomStaking.sol.html  HalomToken.sol.html  HalomTreasury.sol.html
coverage/governance/: QuadraticVotingUtils.sol.html  Timelock.sol.html
coverage/interfaces/: IHalomInterfaces.sol.html
coverage/lcov-report/: index.html
coverage/libraries/: GovernanceErrors.sol.html  index.html
coverage/oracle/: Oracle.sol.html  index.html
coverage/staking/: LPStaking.sol.html  Staking.sol.html
coverage/test/: MockERC20.sol.html  index.html
docker/: docker-compose.yml
docs/: ARCHITECTURE_ANALYSIS.md  BUG_BOUNTY_PROGRAM.md  BUG_BOUNTY_READINESS_SUMMARY.md  COMPREHENSIVE_TESTING_AND_BUG_BOUNTY_PLAN.md  CRITICAL_FIXES_IMPLEMENTATION.md  CRITICAL_FIXES_PLAN.md  CROSS_CHAIN_BRIDGE_IMPLEMENTATION.md  DAO_STRUCTURE_FIXES.md  DAO_STRUCTURE_SUMMARY.md  DAO_TEST_IMPROVEMENT_PLAN.md  DELEGATION_MECHANISM.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  GOVERNANCE_ROLES_IMPLEMENTATION.md  GOVERNANCE_TEST_COVERAGE_ANALYSIS.md  HALOM_AUDIT_REPORT.md  IMMUTABLE_ROLES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  ORACLE_AUDIT_SUMMARY.md  PROJECT_REORGANIZATION_SUMMARY.md  QUICK_TEST_IMPLEMENTATION_GUIDE.md  READINESS_SUMMARY.md  README.md  ROLE_MANAGEMENT_FIXES.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_FIXES_SUMMARY.md  TESTNET_DEPLOYMENT_SUMMARY.md  TEST_STATUS_SUMMARY.md  api.md  architecture.md  contracts.md  deploy.md  file_structure_guide.md  mermaid_diagrams.md  npm-dependency-resolution.md  oracle-metrics-specification.md  public-functions-overview.md  (+7 more)
node/: Dockerfile  README.md
node/pallets/halom_oracle/: Cargo.toml
node/pallets/halom_oracle/src/: lib.rs  mock.rs  tests.rs
node/pallets/pow_rewards/: Cargo.toml
node/pallets/pow_rewards/src/: lib.rs  mock.rs  tests.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
offchain/: __init__.py  calculator.py  enhanced_updater.py  enhanced_updater_v2.py  entrypoint.sh  hoi_engine.py  test_calculator.py  test_hoi_engine.py  updater.py
offchain-scripts/: enhanced_updater.py  fetcher.py  oracle_updater_v2.py  pyrightconfig.json  pytest.ini  test_basic.py  test_calculator.py  test_pandas.py
offchain/processing/: updater.py  (+3 more)
oracle/: Dockerfile  README.md  config.py  consensus.py  data_sources.py  governance.py  inflation_fetcher.py  main.py  metrics.py  requirements.txt
prometheus/: prometheus.yml
scripts/: __init__.py  deploy.js  deploy_governance.js  deploy_secure_roles.js  deploy_testnet.js  run-integration-tests.sh  run-performance-tests.sh  setup_mainnet_staking.js  upgrade_contracts.js  wait-for-services.sh
security/: .solhint.json  slither.config.json
test/: run-all-tests.js  security-audit-tests.cjs  security-audit-tests.js  simple-test.cjs  test-critical-fixes.cjs  test-dao-participation.cjs  test-delegation.cjs  test-delegation.js  test-governance-complete-flow.cjs  test-governance-comprehensive.cjs  test-governance-critical-missing.cjs  test-governance-enhanced.cjs  test-governance.cjs  test-governance.js  test-lp-staking.cjs  test-lp-staking.js  test-oracle-comprehensive.cjs  test-oracle-v2-comprehensive.cjs  test-oracle.cjs  test-oracle.js  test-oraclev2-comprehensive.cjs  test-reward-treasury-sync.cjs  test-secure-roles.cjs  test-secure-roles.js  test-setup.cjs  test-staking-comprehensive.cjs  test-staking.cjs  test-staking.js  test-timelock-comprehensive.cjs  test-timelock.cjs  test-token-comprehensive.cjs  test-token-simple.cjs  test-token.cjs  test-token.js  test-treasury.cjs
test-reports/: test-report-1751433824627.json
tests/: role-based-architecture.test.cjs  test-dao-participation.cjs  test-governance-critical-missing.cjs  test-governance.cjs  test-reward-treasury-sync.cjs  test-secure-roles.cjs  test-staking-edge-cases.cjs  test-token-comprehensive.cjs  test-treasury-comprehensive.cjs  zksync-integration.test.cjs
(+93 files in other folders)
